add animation and fix issues

--- a/course-details.html
+++ b/course-details.html
@@ -127,7 +127,7 @@
 
     <!-- ==========course details Section start Here========== -->
     <div class="coursedetails coursedetails--style1 padding-top padding-bottom">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="row flex-lg-row-reverse g-5">
                 <div class="col-lg-4">
                     <div class="coursedetails__package">
@@ -513,9 +513,8 @@
 
 
     <!-- ==========Course Curriculum Section start Here========== -->
-    <div class="coursedetails coursedetails--style2 padding-top padding-bottom brand1-bg-1" data-aos="fade-up"
-        data-aos-duration="500">
-        <div class="container">
+    <div class="coursedetails coursedetails--style2 padding-top padding-bottom brand1-bg-1" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="coursedetails__wrapper">
                 <div class="coursedetails__header">
                     <h3>Course Curriculum</h3>
@@ -770,7 +769,7 @@
 
     <!-- ===============>> Mentor details section start here <<================= -->
     <section class="team team--details padding-top">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header">
                 <h3>Instructor</h3>
             </div>
@@ -816,7 +815,7 @@
 
     <!-- ===============>>Student Reviews section start here <<================= -->
     <section class="studentreview padding-top">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header">
                 <h3>Real Review</h3>
                 <p class="mute">Here's what our students have to say about their experience with Designership.</p>
@@ -929,8 +928,8 @@
 
 
     <!-- ===============>> Popular course section start here <<================= -->
-    <section class="course course--style1 padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="course course--style1 padding-top padding-bottom">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header">
                 <h2>Some More Courses For You</h2>
             </div>
@@ -1073,8 +1072,8 @@
 
 
     <!-- ===============>> newsletter start here <<================= -->
-    <div class="newsletter" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <div class="newsletter" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="newsletter__wrapper">
                 <div class="newsletter__content">
                     <div class="newsletter__content-inner newsletter__content-inner--style1 text-center"
