--- a/index-2.html
+++ b/index-2.html
@@ -172,8 +172,8 @@
 
 
     <!-- ===============>> partner section start here <<================= -->
-    <section class="partner partner--style2" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="partner partner--style2">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h6>Trusted by 4,000+ companies</h6>
             </div>
@@ -225,8 +225,8 @@
 
 
     <!-- ===============>> Course categories start here <<================= -->
-    <div class="categories categories--style2 padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <div class="categories categories--style2 padding-top padding-bottom" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <div class="subtitle subtitle--style2 justify-content-center">
                     <img src="assets/images/icon/home2/1.png" alt="star icon">
@@ -372,9 +372,8 @@
 
 
     <!-- ===============>> Popular course section start here <<================= -->
-    <section class="course course--style2 padding-top padding-bottom brand2-bg-4" data-aos="fade-up"
-        data-aos-duration="800">
-        <div class="container">
+    <section class="course course--style2 padding-top padding-bottom brand2-bg-4" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <div class="subtitle subtitle--style2 justify-content-center">
                     <img src="assets/images/icon/home2/1.png" alt="star icon">
@@ -562,12 +561,11 @@
 
 
     <!-- ===============>> counter start here <<================= -->
-    <div class="counter counter--style1 bg--cover" style="background-image:url(assets/images/counter/home2/bg.png)"
-        data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <div class="counter counter--style1 bg--cover" style="background-image:url(assets/images/counter/home2/bg.png)">
+        <div class="container" >
             <div class="counter__wrapper">
                 <div class="row g-5">
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="400">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -581,7 +579,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="600">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -595,7 +593,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="800">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -609,7 +607,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -631,8 +629,8 @@
 
 
     <!-- ===============>> Community section start here <<================= -->
-    <div class="community community--style2 padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <div class="community community--style2 padding-top padding-bottom">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="community__wrapper brand2-bg-1">
                 <div class="row align-items-center g-0">
                     <div class="col-lg-6">
@@ -667,9 +665,8 @@
 
 
     <!-- ===============>> Testimonial section start here <<================= -->
-    <section class="testimonial testimonial--style2 padding-top padding-bottom brand2-bg-3" data-aos="fade-up"
-        data-aos-duration="800">
-        <div class="container">
+    <section class="testimonial testimonial--style2 padding-top padding-bottom brand2-bg-3">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h2>What students are saying</h2>
                 <p class="style2">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. officia
@@ -797,9 +794,8 @@
 
 
     <!-- ===============>> Team section start here <<================= -->
-    <section class="team team--style1 padding-top padding-bottom brand2-bg-2" data-aos="fade-up"
-        data-aos-duration="800">
-        <div class="container">
+    <section class="team team--style1 padding-top padding-bottom brand2-bg-2">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center section-header--dark">
                 <h2>Meet with Our Expert Mentor</h2>
                 <p class="style2">Minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. duis enim velit
@@ -952,8 +948,8 @@
 
 
     <!-- ===============>> Blog section start here <<================= -->
-    <section class="blog blog--style2 padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="blog blog--style2 padding-top padding-bottom" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="blog__header">
                 <h2>Everything you need to know about development</h2>
                 <a href="blog.html" class="trk-btn trk-btn--border trk-btn--secondary2">View More <span><i
@@ -1077,8 +1073,8 @@
 
 
     <!-- ===============>> cta start here <<================= -->
-    <div class="cta padding-bottom" data-aos="zoom-in" data-aos-duration="800">
-        <div class="container">
+    <div class="cta padding-bottom">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="cta__wrapper bg--cover br-16" style="background-image:url(assets/images/others/newsletter.png)">
                 <div class="cta__content">
                     <div class="cta__content-inner text-center">
