--- a/index-4.html
+++ b/index-4.html
@@ -154,8 +154,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="banner__shape">
+        </div> 
+        <div class="banner__shape banner__shape--style2">
             <span class="banner__shape-item banner__shape-item--animation"><img src="assets/images/shape/home2/1.png"
                     alt="roket"></span>
             <span class="banner__shape-item banner__shpae-item--animation"><img src="assets/images/shape/home2/2.png"
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="700">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="800">
                         <div class="categories__item">
                             <div class="categories__item-inner">
                                 <img src="assets/images/category/home4/2.png" alt="cateogory icon">
@@ -206,7 +206,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="800">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="categories__item">
                             <div class="categories__item-inner">
                                 <img src="assets/images/category/home4/3.png" alt="cateogory icon">
@@ -221,7 +221,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="900">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="1200">
                         <div class="categories__item">
                             <div class="categories__item-inner">
                                 <img src="assets/images/category/home4/4.png" alt="cateogory icon">
@@ -412,8 +412,8 @@
 
 
     <!-- ===============>> Story section start here <<================= -->
-    <section class="story padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="story padding-top padding-bottom">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h2 class="style2-h2 style2-h2--defult">Take a video Tour</h2>
                 <p class="style2">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -438,7 +438,7 @@
     <!-- ===============>> Team section start here <<================= -->
     <section class="team  team--style1 padding-top padding-bottom bg--full"
         style="background-image: url(assets/images/bg/home4/2.png);" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="team__wrapper">
                 <div class="row g-4 text-center">
                     <div class="col-lg-6 col-sm-12" data-aos="fade-right" data-aos-duration="800">
@@ -549,8 +549,8 @@
     <!-- ===============>> Team section end here <<================= -->
 
     <!-- ===============>> Gallery section start here <<================= -->
-    <section class="gallery padding-bottom padding-top" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="gallery padding-bottom padding-top">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h2 class="style2-h2 style2-h2--defult">Our Gallery</h2>
             </div>
@@ -740,9 +740,9 @@
 
 
     <!-- ===============>> Blog section start here <<================= -->
-    <section class="blog blog--style1 padding-top padding-bottom bg--defult" data-aos="fade-up" data-aos-duration="800"
+    <section class="blog blog--style1 padding-top padding-bottom bg--defult"
         style="background-image: url(assets/images/bg/home4/3.png);">
-        <div class="container">
+        <div class="container" >
             <div class="blog__header">
                 <h2 class="style2-h2 style2-h2--defult style2-h2--max20">Latest News, Blog & Articles</h2>
                 <a href="blog.html" class="trk-btn trk-btn--rounded trk-btn--secondary4">More Blog
@@ -750,7 +750,7 @@
             </div>
             <div class="blog__wrapper">
                 <div class="row g-4">
-                    <div class="col-lg-4 col-md-6" data-aos="fade-right" data-aos-duration="800">
+                    <div class="col-lg-4 col-md-6" data-aos="fade-right" data-aos-duration="600">
                         <div class="blog__item">
                             <div class="blog__item-inner">
                                 <div class="blog__thumb">
@@ -794,7 +794,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6" data-aos="fade-left" data-aos-duration="800">
+                    <div class="col-lg-4 col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="blog__item">
                             <div class="blog__item-inner">
                                 <div class="blog__thumb">
@@ -824,8 +824,8 @@
 
 
     <!-- ===============>> newsletter start here <<================= -->
-    <div class="newsletter" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <div class="newsletter">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="newsletter__wrapper">
                 <div class="newsletter__content">
                     <div class="newsletter__content-inner newsletter__content-inner--style4 text-center"
