--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="banner__shape">
+        </div> 
+        <div class="banner__shape banner__shape--style1">
             <span class="banner__shape-item banner__shape-item--animation"><img src="assets/images/shape/home1/1.png"
                     alt="roket"></span>
             <span class="banner__shape-item banner__shpae-item--animation"><img src="assets/images/shape/home1/2.png"
@@ -170,7 +170,7 @@
                 <div class="reviews">
                     <div class="reviews__content">
                         <p><span class="purecounter" data-purecounter-start="300" data-purecounter-end="365"
-                                data-purecounter-once="false">365</span>enrolled students</p>
+                                data-purecounter-once="false">365</span>k+ enrolled students</p>
                     </div>
                     <div class="reviews__thumb">
                         <ul>
@@ -183,8 +183,9 @@
                             <li><img src="assets/images/community/avator/home1/7.png" alt="user image"></li>
                             <li>
                                 <div class="count">
-                                    <span class="purecounter" data-purecounter-start="0" data-purecounter-end="50"
-                                        data-purecounter-once="false">50</span>+
+                                    <p class="mb-0"><span class="purecounter" data-purecounter-start="0" data-purecounter-end="50"
+                                        data-purecounter-once="false">50</span> <span class="plus">+</span></p>
+                                    
                                 </div>
                             </li>
                         </ul>
@@ -381,9 +382,8 @@
 
     <!-- ===============>> Popular course section start here <<================= -->
 
-    <section class="course course--style1 padding-top padding-bottom brand-1" data-aos="fade-up"
-        data-aos-duration="800">
-        <div class="container-fluid px-lg-0">
+    <section class="course course--style1 padding-top padding-bottom brand-1">
+        <div class="container-fluid px-lg-0" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center section-header--dark">
                 <h2>Our Most Popular Courses</h2>
                 <p class="style4">Minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. duis enim velit
@@ -534,8 +534,8 @@
 
 
     <!-- ===============>> Story section start here <<================= -->
-    <section class="story padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="story padding-top padding-bottom">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h2>Our Success Story</h2>
                 <p class="style2">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -559,12 +559,12 @@
 
 
     <!-- ===============>> Team section start here <<================= -->
-    <section class="team  team--style1 padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="team  team--style1 padding-bottom" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="team__wrapper">
                 <div class="row g-4">
                     <div class="col-md-6 col-sm-12">
-                        <div class="team__header">
+                        <div class="team__header" data-aos="fade-right" data-aos-duration="1000">
                             <h2>Meet Our Expert</h2>
                             <p class="style3">Clarity gives you the blocks & components you needto create a truly
                                 professional website, landing page or admin panel for your saas
@@ -672,9 +672,8 @@
 
 
     <!-- ===============>> Community section start here <<================= -->
-    <section class="community community--style1 padding-top padding-bottom brand1-bg-1" data-aos="fade-up"
-        data-aos-duration="800">
-        <div class="container">
+    <section class="community community--style1 padding-top padding-bottom brand1-bg-1" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h2>Join the biggest <br>
                     Community of learning</h2>
@@ -685,7 +684,7 @@
             <div class="community__wrapper">
                 <div class="community__map">
                     <div class="community__map-inner">
-                        <div class="community__reviews">
+                        <div class="community__reviews" data-aos="fade-up" data-aos-duration="1000">
                             <p> <i class="fa-solid fa-heart"></i> Happy Strudents</p>
                             <div class="community__reviews-content">
                                 <ul>
@@ -695,8 +694,9 @@
                                     <li><img src="assets/images/community/avator/4.png" alt="user image"></li>
                                     <li><img src="assets/images/community/avator/5.png" alt="user image"></li>
                                 </ul>
-                                <span class="purecounter" data-purecounter-start="0" data-purecounter-end="25"
-                                    data-purecounter-once="false">25</span>
+                                <p class="count mb-0">+<span class="purecounter" data-purecounter-start="10" data-purecounter-end="25"
+                                    data-purecounter-once="false">25</span>K</p>
+                                
                             </div>
                         </div>
                         <img src="assets/images/community/1.png" alt="community image">
@@ -712,7 +712,7 @@
 
     <!-- ===============>> Testimonial section start here <<================= -->
     <section class="testimonial testimonial--style1 padding-top padding-bottom brand-1">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center section-header--dark">
                 <h2>What Clients Have to Say About Us</h2>
                 <p class="style2">Interdum et malesuada fames ac ante ipsum</p>
@@ -860,7 +860,7 @@
 
 
     <!-- ===============>> Blog section start here <<================= -->
-    <section class="blog blog--style1 padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
+    <section class="blog blog--style1 padding-top padding-bottom">
         <div class="container">
             <div class="blog__header">
                 <h2 class="style2-h2--max20">Latest News, Blog & Articles</h2>
@@ -868,7 +868,7 @@
             </div>
             <div class="blog__wrapper">
                 <div class="row g-4">
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="700">
+                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="600">
                         <div class="blog__item">
                             <div class="blog__item-inner">
                                 <div class="blog__thumb">
@@ -914,7 +914,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="900">
+                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="blog__item">
                             <div class="blog__item-inner">
                                 <div class="blog__thumb">
