--- a/courses.html
+++ b/courses.html
@@ -135,7 +135,7 @@
     <div class="course course--style1 padding-top padding-bottom">
         <div class="container">
             <div class="course__topbar">
-                <div class="course__topbar-left">
+                <div class="course__topbar-left" data-aos="fade-right" data-aos-duration="800">
                     <select name="cars" class="form-select">
                         <option value="following">Following</option>
                         <option value="content">UI/UX </option>
@@ -144,7 +144,7 @@
                         <option value="seo">Social</option>
                     </select>
                 </div>
-                <div class="course__topbar-right">
+                <div class="course__topbar-right" data-aos="fade-left" data-aos-duration="800">
                     <ul class="nav nav-pills" id="pills-tab" role="tablist">
                         <li class="nav-item" role="presentation">
                             <a class="tab-btn active" id="pills-english-tab" data-bs-toggle="pill"
@@ -180,7 +180,7 @@
                 </div>
             </div>
 
-            <div class="course__wrapper">
+            <div class="course__wrapper" data-aos="fade-up" data-aos-duration="800">
                 <div class="tab-content" id="pills-tabContent">
                     <div class="tab-pane fade show active" id="pills-english" role="tabpanel" content
                         aria-labelledby="pills-english-tab" tabindex="0">
