--- a/index-3.html
+++ b/index-3.html
@@ -165,8 +165,8 @@
 
 
     <!-- ===============>> partner section start here <<================= -->
-    <section class="partner partner--style2" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="partner partner--style2">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h6>Trusted by 4,000+ companies</h6>
             </div>
@@ -218,9 +218,8 @@
 
 
     <!-- ===============>> Course categories section start here <<================= -->
-    <section class="categories categories--style3 padding-top  padding-bottom" data-aos="fade-up"
-        data-aos-duration="800">
-        <div class="container">
+    <section class="categories categories--style3 padding-top  padding-bottom">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="categories__wrapper">
                 <div class="row g-4">
                     <div class="col-xl-6 col-lg-8 col-md-12 col-sm-12" data-aos="fade-right" data-aos-duration="800">
@@ -402,9 +401,8 @@
 
 
     <!-- ===============>> Popular course section start here <<================= -->
-    <section class="course course--style3 padding-top padding-bottom brand3-bg-1" data-aos="fade-up"
-        data-aos-duration="800">
-        <div class="container">
+    <section class="course course--style3 padding-top padding-bottom brand3-bg-1">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <div class="subtitle subtitle--style3 justify-content-center">
                     <img src="assets/images/icon/home3/2.png" alt="roket icon">
@@ -1959,11 +1957,11 @@
 
 
     <!-- ===============>> counter start here <<================= -->
-    <div class="counter counter--style2  brand-3" data-aos="fade-up" data-aos-duration="800">
+    <div class="counter counter--style2  brand-3">
         <div class="container">
             <div class="counter__wrapper">
                 <div class="row g-5">
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-duration="400">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -1977,7 +1975,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-duration="600">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -1991,7 +1989,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-duration="800">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -2005,7 +2003,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -2027,8 +2025,8 @@
 
 
     <!-- ===============>> Team section start here <<================= -->
-    <section class="team team--style2 padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="team team--style2 padding-top padding-bottom">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h2>Meet with Our Expert Mentor</h2>
                 <p class="style2">Minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. duis enim velit
@@ -2177,9 +2175,8 @@
 
 
     <!-- ===============>> Testimonial section start here <<================= -->
-    <section class="testimonial testimonial--style3 padding-top padding-bottom brand3-bg-1" data-aos="fade-up"
-        data-aos-duration="800">
-        <div class="container">
+    <section class="testimonial testimonial--style3 padding-top padding-bottom brand3-bg-1" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h2>Loved by Our Students</h2>
             </div>
@@ -2437,8 +2434,8 @@
 
 
     <!-- ===============>> Blog section start here <<================= -->
-    <section class="blog blog--style3 padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container-fluid px-sm-0">
+    <section class="blog blog--style3 padding-top padding-bottom">
+        <div class="container-fluid px-sm-0" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <div class="subtitle subtitle--style3 justify-content-center">
                     <img src="assets/images/icon/home3/1.png" alt="roket icon">
@@ -2538,7 +2535,7 @@
     <footer class="footer brand-3 bg--cover" style="background-image:url(assets/images/footer/home3/bg.png)">
         <div class="container">
             <div class="footer__wrapper">
-                <div class="footer__upper padding-top">
+                <div class="footer__upper padding-top" data-aos="fade-up" data-aos-duration="800">
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-7 col-md-6">
                             <div class="footer__cta">
